adding style to login and signup

--- a/express-react-app/frontend/src/components/Navigation/Navigation.css
+++ b/express-react-app/frontend/src/components/Navigation/Navigation.css
@@ -9,6 +9,7 @@ body {
 
 .nav-bar-ul {
 	display: flex;
-	justify-content: center;
+	flex-direction: row-reverse;
+	justify-content: right;
 	list-style-type: none;
 }
