--- a/express-react-app/frontend/src/components/Navigation/Navigation.css
+++ b/express-react-app/frontend/src/components/Navigation/Navigation.css
@@ -13,3 +13,16 @@ body {
 	justify-content: right;
 	list-style-type: none;
 }
+
+.profile-dropdown {
+	background-color: white;
+	border: 1px solid red;
+	border-radius: 15px;
+	list-style-type: none;
+	margin: 5px;
+	padding: 15px;
+}
+
+/* .profile-dropdown__li {
+	margin: 0 auto;
+} */
