--- a/express-react-app/frontend/src/components/Navigation/Navigation.css
+++ b/express-react-app/frontend/src/components/Navigation/Navigation.css
@@ -23,6 +23,8 @@ body {
 	padding: 15px;
 }
 
-/* .profile-dropdown__li {
-	margin: 0 auto;
-} */
+.fa-hat-wizard {
+	width: 20px;
+	height: 20px;
+	align-content: center;
+}
