--- a/express-react-app/frontend/src/components/Navigation/Navigation.css
+++ b/express-react-app/frontend/src/components/Navigation/Navigation.css
@@ -2,6 +2,22 @@ body {
 	font-family: 'Yusei Magic', 'sans-serif';
 }
 
+.nav-bar__container {
+	background-color: white;
+	opacity: 0.8;
+	border: 1px solid black;
+	border-radius: 15px;
+	display: flex;
+	align-items: center;
+}
+
+.nav-bar-logo__container {
+	display: flex;
+	margin-left: 20px;
+	align-items: center;
+	/* justify-content: flex-start; */
+}
+
 .nav-bar {
 	text-decoration: none;
 	padding: 30px;
@@ -10,8 +26,8 @@ body {
 .nav-bar-ul {
 	display: flex;
 	flex-direction: row-reverse;
-	justify-content: right;
 	list-style-type: none;
+	margin-left: 58%;
 }
 
 .profile-dropdown {
@@ -23,8 +39,58 @@ body {
 	padding: 15px;
 }
 
-.fa-hat-wizard {
-	width: 20px;
-	height: 20px;
-	align-content: center;
+.title-logo {
+	width: 300px;
+	height: 300px;
+	border: 1px solid black;
+	border-radius: 160px;
+}
+
+.nav-bar__logotxt {
+	width: 100px;
+	height: 90px;
+}
+
+.nav-bar__profile-btn {
+	border: none;
+}
+
+.nav-bar__link {
+	margin-right: 20px;
+	font-size: 18px;
+	color: brown;
+	transition-property: font-size;
+	transition-delay: 0s;
+}
+
+.nav-bar__link:hover {
+	font-size: 22px;
+	color: blue;
+}
+
+.home-logo__container {
+	display: block;
+	background-color: white;
+	opacity: 0.8;
+	border: 1px solid black;
+	border-radius: 15px;
+	margin: 20px;
+	height: auto;
+}
+
+.title-logo__container {
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	/* padding-top: -55px; */
+}
+
+.title-container {
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+}
+
+.title-logotxt {
+	width: 350px;
 }
