added images on category home component, broke titles

--- a/express-react-app/frontend/src/components/category/Category.css
+++ b/express-react-app/frontend/src/components/category/Category.css
@@ -20,7 +20,7 @@
 
 .category-component:hover {
 	opacity: 1;
-	background-color: red;
+	background-color: rgba(190, 23, 34, 0.7);
 }
 
 .component-title {
