--- a/express-react-app/frontend/src/components/LoginFormPage/LoginForm.css
+++ b/express-react-app/frontend/src/components/LoginFormPage/LoginForm.css
@@ -55,6 +55,21 @@ body {
 	font-weight: bolder;
 }
 
+.category-page__header {
+	display: block;
+}
+
+.category-header__container {
+	display: flex;
+	justify-content: center;
+	margin: 0 auto;
+	background-color: white;
+	opacity: 0.8;
+	border: 1px solid black;
+	border-radius: 20px;
+	width: 1000px;
+}
+
 .initial-form {
 	display: flex;
 	justify-content: center;
